@@ -61,12 +61,20 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.1</version>
                 <configuration>
                     <mainClass>com.flowlogix.example.HelloEntryPoint</mainClass>
                 </configuration>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>3.1.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <profiles>
@@ -75,6 +83,28 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>java-agent</id>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>java</executable>
+                                    <workingDirectory>${project.build.directory}</workingDirectory>
+                                    <arguments>
+                                        <argument>--enable-preview</argument>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>com.flowlogix.example.HelloEntryPoint</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
                         <groupId>org.graalvm.buildtools</groupId>
                         <artifactId>native-maven-plugin</artifactId>
                         <version>0.9.28</version>
@@ -82,8 +112,15 @@
                         <configuration>
                             <buildArgs>
                                 <arg>--enable-preview</arg>
-                                <arg>-H:ReflectionConfigurationFiles=${project.build.resources[0].directory}/reflection.json</arg>
+                                <arg>-H:DashboardDump=java-native -H:+DashboardAll</arg>
+                            <!-- <arg>-H:ReflectionConfigurationFiles=${project.build.resources[0].directory}/reflection.json</arg>-->
                             </buildArgs>
+                            <agent>
+                                <enabled>true</enabled>
+                                <options>
+                                    <enableExperimentalPredefinedClasses>true</enableExperimentalPredefinedClasses>
+                                </options>
+                            </agent>
                         </configuration>
                         <executions>
                             <execution>
